--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobil",
+  "name": "tersacikartirma-mobil",
   "author": "Microsoft Corp.",
   "homepage": "https://www.typescriptlang.org/",
   "version": "1.0.0",
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/microsoft/TypeScript/issues"
   },
-  "main": "./lib/typescript.js",
+  "main": "node_modules/expo/AppEntry.js",
   "typings": "./lib/typescript.d.ts",
   "bin": {
     "tsc": "./bin/tsc",
@@ -34,6 +34,8 @@
     "!**/.gitattributes"
   ],
   "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@dprint/formatter": "^0.4.1",
     "@dprint/typescript": "0.93.3",
     "@esfx/canceltoken": "^1.0.0",
@@ -45,12 +47,14 @@
     "@types/mocha": "^10.0.10",
     "@types/ms": "^0.7.34",
     "@types/node": "latest",
+    "@types/react": "~18.2.45",
     "@types/source-map-support": "^0.5.10",
     "@types/which": "^3.0.4",
     "@typescript-eslint/rule-tester": "^8.18.1",
     "@typescript-eslint/type-utils": "^8.18.1",
     "@typescript-eslint/utils": "^8.18.1",
     "azure-devops-node-api": "^14.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "c8": "^10.1.3",
     "chai": "^4.5.0",
     "chalk": "^4.1.2",
@@ -72,10 +76,12 @@
     "mocha-fivemat-progress-reporter": "^0.1.0",
     "monocart-coverage-reports": "^2.11.4",
     "ms": "^2.1.3",
+    "patch-package": "^8.0.0",
     "playwright": "^1.49.1",
+    "postinstall-postinstall": "^2.1.0",
     "source-map-support": "^0.5.21",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.2",
+    "typescript": "^5.3.0",
     "typescript-eslint": "^8.18.1",
     "which": "^3.0.1"
   },
@@ -94,7 +100,13 @@
     "lint": "hereby lint",
     "knip": "hereby knip",
     "format": "dprint fmt",
-    "setup-hooks": "node scripts/link-hooks.mjs"
+    "setup-hooks": "node scripts/link-hooks.mjs",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "tunnel": "expo start --tunnel",
+    "postinstall": "patch-package"
   },
   "browser": {
     "fs": false,
@@ -112,5 +124,25 @@
     "npm": "8.19.4"
   },
   "gitHead": "beb69e4cdd61b1a0fd9ae21ae58bd4bd409d7217",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "axios": "^1.6.7",
+    "expo": "~52.0.0",
+    "expo-font": "^13.0.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "^0.27.4",
+    "jwt-decode": "^3.1.2",
+    "react": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "^3.29.0",
+    "socket.io-client": "^4.7.4"
+  }
 }
