--- a/package.json
+++ b/package.json
@@ -127,22 +127,22 @@
   "private": true,
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
-    "expo": "~52.0.0",
+    "expo": "~52.0.46",
     "expo-font": "^13.0.4",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~2.0.1",
     "expo-updates": "^0.27.4",
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "^3.29.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "socket.io-client": "^4.7.4"
   }
 }
